# handsoff

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: architecture.md  hackathon-judge-guide.md  privacy-boundaries.md  product-charter.md  release-checklist.md  streamlit-deployment.md  threat-model.md  verification-plan.md
docs/adr/: 0001-modular-monolith.md  0002-model-is-not-controller.md  0003-simulator-first.md  0004-streamlit-hackathon-interface.md
scenarios/: blocked_garage.yaml  demand_response.yaml  false_proximity.yaml  nominal_arrival.yaml  partial_failure.yaml  stale_telemetry.yaml
scripts/: check_docs.py  check_repository.py  check_secrets.py  evaluate_planner.py  run_demo.py  validate.py
src/handsoff/: __init__.py
src/handsoff/adapters/: __init__.py
src/handsoff/application/: __init__.py  capability_registry.py  compile_goal.py  conditions.py  evaluate_plan.py  execute_plan.py  ledger.py  planner_evaluation.py  run_scenario.py  verify_outcome.py  world_model.py
src/handsoff/domain/: __init__.py  capabilities.py  events.py  execution.py  goals.py  observations.py  planning.py  plans.py  policies.py  scenarios.py
src/handsoff/ports/: __init__.py  capability_adapter.py  clock.py  memory.py  planner.py  repositories.py
tests/: __init__.py  test_foundation.py
tests/contract/: __init__.py  test_reference_scenarios.py
tests/fixtures/: __init__.py  contracts.py
tests/integration/: __init__.py  test_runtime.py  test_streamlit_app.py
tests/property/: __init__.py  test_contract_properties.py
tests/scenarios/: __init__.py  test_reference_runtime.py
tests/unit/: __init__.py
(+43 files in other folders)
