[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "handsoff"
version = "0.0.0"
description = "Repository foundation for a local-first goal-to-verified-outcome runtime"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Vedang Alle" }]
dependencies = [
    "alembic>=1.17,<2",
    "fastapi>=0.121,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0,<7",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.38,<1",
]

[project.optional-dependencies]
planner-gemini = ["google-genai>=1.52,<2"]

[dependency-groups]
dev = [
    "coverage[toml]>=7.11,<8",
    "detect-secrets>=1.5,<2",
    "hypothesis>=6.142,<7",
    "mypy>=1.18,<2",
    "pip-audit>=2.9,<3",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.14,<1",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["uv.lock"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["INP001", "S603", "S607", "T201"]
"tests/**/*.py" = ["INP001", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "scripts", "tests"]
warn_unreachable = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["handsoff"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
